Install and run Chef by calling from a powershell script. Packer doesn't handle copying files via WinRM very well so all files are coming in through the attached ISO. Additionally you can't install windows features over WinRM so we need to run chef via a service
references #3

--- a/ops.build.props
+++ b/ops.build.props
@@ -118,6 +118,31 @@
             <Destination>$(DirBuildTemp)</Destination>
             <Hash>4E55555025A9AF26BF77E18BA5AAF262EDEAF8ACB10580EE3FABFF50C83D0D5A</Hash>
             <HashAlgorithm>SHA256</HashAlgorithm>
+            <Name>chef.msi</Name>
+            <Unzip>false</Unzip>
+        </HttpFilesToCopy>
+        <HttpFilesToCopy Include="https://github.com/ebsco/chefservice/releases/download/v1.0.0.2/ChefService.exe">
+            <Destination>$(DirBuildTemp)</Destination>
+            <Hash>09795E2B834B050D260CD59AA439F72251C8C0FED1FB85F6E78E0A3FD6903DF7</Hash>
+            <HashAlgorithm>SHA256</HashAlgorithm>
+            <Unzip>false</Unzip>
+        </HttpFilesToCopy>
+        <HttpFilesToCopy Include="https://github.com/ebsco/chefservice/releases/download/v1.0.0.2/ChefService.exe.config">
+            <Destination>$(DirBuildTemp)</Destination>
+            <Hash>10EB1611AE052ED44771663A589F553B51735EFD722A4F33CEAFBE4689553E3C</Hash>
+            <HashAlgorithm>SHA256</HashAlgorithm>
+            <Unzip>false</Unzip>
+        </HttpFilesToCopy>
+        <HttpFilesToCopy Include="https://github.com/ebsco/chefservice/releases/download/v1.0.0.2/eis-chef.exe">
+            <Destination>$(DirBuildTemp)</Destination>
+            <Hash>A9ACF5349477A09BCB248670E0C3D5BB86B5251560713CE6AD3754E743033597</Hash>
+            <HashAlgorithm>SHA256</HashAlgorithm>
+            <Unzip>false</Unzip>
+        </HttpFilesToCopy>
+        <HttpFilesToCopy Include="https://github.com/ebsco/chefservice/releases/download/v1.0.0.2/eis-chef.exe.config">
+            <Destination>$(DirBuildTemp)</Destination>
+            <Hash>7D713AC5E97DE06C3BBC153E01B74A2871BFC2FAAC79A88E541DD3C01C794C90</Hash>
+            <HashAlgorithm>SHA256</HashAlgorithm>
             <Unzip>false</Unzip>
         </HttpFilesToCopy>
     </ItemGroup>
@@ -520,6 +545,15 @@
             <ChefSpecPattern>./spec/*_spec.rb</ChefSpecPattern>
         </ChefCookbooksToTest>
     </ItemGroup>
+
+
+    <!--
+        **** PACKER - PACK ****
+    -->
+    <PropertyGroup>
+        <!-- Indicate that packer should keep the image if an error occurs. -->
+        <PackerKeepImageOnError>true</PackerKeepImageOnError>
+    </PropertyGroup>
 
 
     <!--
