--- a/ops.props
+++ b/ops.props
@@ -583,6 +583,9 @@
         <TemplateTokens Include="DirBuildTempIso">
             <ReplacementValue>$(DirBuildTempIso)</ReplacementValue>
         </TemplateTokens>
+        <TemplateTokens Include="DirVendorCookbooks">
+            <ReplacementValue>$(DirVendorCookbooks)</ReplacementValue>
+        </TemplateTokens>
     </ItemGroup>
 
 
