--- a/ops.build.props
+++ b/ops.build.props
@@ -145,6 +145,13 @@
             <HashAlgorithm>SHA256</HashAlgorithm>
             <Unzip>false</Unzip>
         </HttpFilesToCopy>
+        <HttpFilesToCopy Include="https://sourceforge.net/projects/acrylic/files/Acrylic/0.9.35/Acrylic-Portable.zip/download">
+            <Destination>$(DirBuildTempCookbooks)\resource_container_host_windows\files\windows\acrylic</Destination>
+            <Hash>50F67A7FABF5D7B42F6B0CE7B19403F734AB6FB419D4B6DFF2DFC649ADEAED46</Hash>
+            <HashAlgorithm>SHA256</HashAlgorithm>
+            <Name>acrylic.zip</Name>
+            <Unzip>true</Unzip>
+        </HttpFilesToCopy>
     </ItemGroup>
     <ItemGroup Condition=" '$(ShouldLoadFilesToCopy)' == 'true' ">
         <FilesToCopy
